# dataset_tools

./: .gitignore  README.md  dst  pyproject.toml  recommendations.txt  requirements-dev.txt  requirements.txt
docs/: index.md
docs/dst/: _generated_inventory.json  api-reference.md  architecture.md  cli-guide.md  cli-reference.md  configuration.md  index.md  module-guide.md  recipes.md  resources.md  test-suite.md
docs/dst/agent/: index.md  onboarding_launchpad.md
docs/dst/context/: advanced_analysis_research.md  cross_repo_compatibility_matrix.md  fiftyone_reference_hub.md  index.md  label_studio_integration_notes.md  label_studio_reference_hub.md  manual_validation_checklist.md  od_training_handoff_contract.md  workflow_hygiene_guide.md
scripts/: activate_env.sh  dst  generate_dst_docs.py  open_fiftyone_app.sh  run_coverage_report.sh  run_precode_gate.sh  run_real_life_suite.sh
src/dataset_tools/: __init__.py  config.py  dst.py  label_studio_json.py  loader.py  local_config.example.json  sync_from_fo_to_disk.py
src/dataset_tools/anomaly/: __init__.py  anomalib.py  base.py  pipeline.py
src/dataset_tools/brain/: __init__.py  base.py  (+4 more)
src/dataset_tools_dst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_anomalib_workflow.py  test_anomaly_pipeline.py  test_brain_operations.py  test_config.py  test_dst.py  test_dst_commands.py  test_fiftyone_contracts.py  test_label_studio_annotation_run_pull.py  test_label_studio_client.py  test_label_studio_json_main.py  test_label_studio_storage_uploader.py  test_label_studio_sync.py  test_loaders_and_wrappers.py  test_metrics_embeddings_extended.py  test_metrics_operations.py  test_models_registry.py  test_real_life_suite.py  test_sync_from_fo_to_disk_extended.py  test_sync_utils.py  test_tag_workflow_analysis.py  test_tag_workflow_core_operations.py  test_translator.py  test_workflows_roundtrip.py
(+45 files in other folders)
